omni/tests/goldens/types/unknown_type_23.err
tests/goldens/types/unknown_type_23.omni:1:13: error: unknown type "Mystery23"
  let value23:Mystery23 = 1
              ~~~~~~~~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_23.omni:1:1: error: cannot assign int to Mystery23
  let value23:Mystery23 = 1
  ~~~~~~~~~~~~~~~~~~~~~~~~~ hint: convert the expression to Mystery23 or change the variable type to int
