omni/tests/goldens/types/unknown_type_23.omni
let value23:Mystery23 = 1
